--- a/Users/Users.Web/Content/Site.css
+++ b/Users/Users.Web/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 20px;
     padding-bottom: 20px;
 }
 
@@ -21,4 +21,35 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.webgrid-table {
+    width: 100%
+}
+
+.webgrid-header {
+    background-color: #e8eef4;
+    border: 1px solid #000000;
+    height: 40px;
+    font-weight: bold;
+}
+
+.webgrid-header th {
+    padding-left: 5px;
+}
+
+.webgrid-table td {
+    border-left: 1px solid #000000;
+    border-right: 1px solid #000000;
+    padding: 5px;
+}
+
+.webgrid-table tr:last-child {
+    border-bottom: 1px solid #000000;
+}
+
+
+.webgrid-footer {
+    background-color: #e8eef4;
+    border: 1px solid #000000;
 }
